# kakeibo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  tasks.py
.github/workflows/: cd.yml  ci.yml
docker/lambda/: .dockerignore  Dockerfile
kakeibo/: main.py  test_main.py
libs/kakeibo/: pyproject.toml
libs/kakeibo/kakeibo/: __init__.py  __main__.py  config.py  consts.py  google_sheet.py  lambda.py  slack.py
libs/kakeibo/tests/: conftest.py  test_config.py  test_service.py
libs/receipt/: pyproject.toml
libs/receipt/receipt/: __init__.py  __main__.py  main.py  receipt.py
scripts/: clean_caches.sh
src/: main.py  test_main.py
src/kakeibo/: config.py  consts.py  google_sheet.py  main.py  service.py  slack.py  usecase.py  utils.py
src/receipt/: main.py
tests/: conftest.py  test_config.py  test_google_sheet.py  test_main.py  test_service.py  test_slack.py  test_usecase.py  test_utils.py
