[project]
name = "kakeibo"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "pydantic>=2.6.4",
    "gspread>=6.0.2",
    "oauth2client>=4.1.3",
    "requests>=2.31.0",
    "structlog>=24.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
kakeibo = "kakeibo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "types-requests>=2.31.0.20240311",
    "invoke>=2.2.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kakeibo"]

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Enable isort(`I`), flake8-bugbear (`B`) and flake8-quotes (`Q`) optionally.
select = ["E4", "E7", "E9", "F", "I", "B", "Q"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
