[project]
name = "kakeibo"
version = "0.1.0"
description = "Serverless household accounting application for AWS Lambda"
authors = []
dependencies = [
    "gspread>=6.0.2",
    "oauth2client>=4.1.3",
    "pydantic>=2.6.4",
    "requests>=2.31.0",
    "structlog>=24.1.0",
]
requires-python = ">= 3.13"

[project.scripts]
kakeibo = "kakeibo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kakeibo"]
