[project]
name = "receipt"
version = "0.1.0"
description = "ML-based receipt processing application with OCR and AI data extraction"
authors = []
dependencies = [
    "accelerate>=1.11.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "yomitoku>=0.10.1",
]
requires-python = ">= 3.13"

[project.scripts]
receipt = "receipt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["receipt"]
